[package]
name = "safeapp_website_service"
version = "0.1.0"
edition = "2021"
authors = [ "Mohammadreza Hajianpour <hajianpour.mr@gmail.com>" ]
description = "CF Worker for Data Fetching for SafeApp's website"
repository = "https://github.com/Borderliner/safeapp-website-service"
license = "Proprietary"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.2", features=['http'] }
worker-macros = { version="0.4.2", features=['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = { version = "1.1" }
thiserror = { version = "2.0.0" }
